app/globals.css
@import "tailwindcss";

:root {
  --background: #ffffff;
  --foreground: #171717;
}

@theme inline {
  --color-background: var(--background);
  --color-foreground: var(--foreground);
  --font-sans: var(--font-geist-sans);
  --font-mono: var(--font-geist-mono);
}

@media (prefers-color-scheme: dark) {
  :root {
    --background: #0a0a0a;
    --foreground: #ededed;
  }
}

html {
  scrollbar-gutter: stable;
  margin: 0;
  padding: 0;
}

body {
  background: var(--background);
  color: var(--foreground);
  font-family: Arial, Helvetica, sans-serif;
  overflow-y: hidden;
}

.lenis.lenis-smooth {
  scroll-behavior: auto !important;
  overflow: hidden;
}

.lenis.lenis-smooth [data-lenis-prevent] {
  overscroll-behavior: contain;
  overflow: hidden;
}

.lenis.lenis-stopped {
  overflow: hidden;
}

.notable {
  font-family: var(--font-notable);
  letter-spacing: 2px;
}

.grain {
  background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 330 330' xmlns='http://www.w3.org/2000/svg'%3E%3Cfilter id='n'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='0.8' numOctaves='3' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='100%25' height='100%25' filter='url(%23n)' opacity='0.7'/%3E%3C/svg%3E");
  background-size: 100vh 100vh;
  mix-blend-mode: overlay;
  /* try multiply, soft-light, screen */
}

.custom-outline {
  -webkit-text-stroke: 2px #ff7e7e;
}

.custom-small-outline {
  -webkit-text-stroke: 1px #FFC7C7;
  font-weight: 100;
}

.custom-small-outline-em {
  -webkit-text-stroke: 1px #ff7e7e;
  font-weight: 100;
}



.project-item {
  transform-origin: center;
  transition: transform 0.1s linear;
  transform: scale(0.5);
  flex: 0 0 300px;
  box-shadow: 0 10px 30px rgba(0, 0, 0, 0.3)
}

.project-item-image {
  width: 100%;
  height: 100%;
  object-fit: cover;
}

